Fix mobile view whitespace.

--- a/src/components/App/tailwind.build.css
+++ b/src/components/App/tailwind.build.css
@@ -598,7 +598,7 @@ video {
 }
 
 body, html, #root, #root > div {
-  height: 100%;
+  height: 100vh;
 }
 
 button:focus {
