--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -2,7 +2,7 @@
 @tailwind base;
 
 body, html, #root, #root > div {
-  height: 100%;
+  height: 100vh;
 }
 
 button:focus {
